[tool.poetry]
name = "linkml_model_cheatsheets"
version = "0.1.0"
description = "Makes spreasheets from LinkML models, even the metamodel"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
linkml = "^1.2.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
